--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jwhitecl.github.io" # the base hostname & protocol for your site
 twitter_username: jwhitecl
 github_username:  jwhitecl
-
+    
 # Build settings
 markdown: kramdown
+encoding: utf-8
